dataChannel closes unexpectedly, after two rounds of negotiation
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
People
(Reporter: makarandp, Assigned: bwc)
Details
Attachments
(5 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
Steps to reproduce:
I am seeing that dataChannel close unexpected after a round of negotiation.
To reproduce, Please run this JSFiddle
https://jsfiddle.net/makarandp/wynouqhp/
Actual results:
Notice that after Alice and Bob finish 2nd round of negotiation
the dataChannel got closed
for no reason.
Expected results:
dataChannel should instead get opened
and they should be able to send / receive data on it.
Comment 3•6 years ago
|
||
Reproducible on the latest Firefox Nightly 73.0a1, Firefox 72.0b8 and on Firefox 71.0 on Windows 10 x 64, Mac OS X 10.14 and on Ubuntu 18.04 x64.
Comment 4•6 years ago
|
||
Looks like this goes back at least as far back as at least 53. This is most likely not a regression.
Updated•6 years ago
|
Assignee | ||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Hi, any chance this bug can get some movement? Our customers have reported it, data tracks are not very usable in Firefox because of this.
Assignee | ||
Comment 7•5 years ago
|
||
So, it looks like this is because of this code:
The spec doesn't say to do this at all. Let me see if things behave better when I remove this.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 8•5 years ago
|
||
Assignee | ||
Comment 9•5 years ago
|
||
Fiddle seems to be working better with the patches, although the DataChannel is still closing after the open event because the other end hasn't registered on the 'datachannel' event handler, causing the DataChannel to be garbage-collected.
Can you verify that the binary here fixes your issue?
Reporter | ||
Comment 10•5 years ago
|
||
Reporter | ||
Comment 11•5 years ago
|
||
Bryon, I tried to launch the you binary, but got an error while opening it. I have attached the error.
Reporter | ||
Comment 12•5 years ago
|
||
see details here: https://bugzilla.mozilla.org/attachment.cgi?id=9134804&action=edit
Assignee | ||
Comment 13•5 years ago
|
||
Huh. Binary opens fine for me. Maybe try the opt build here?
Reporter | ||
Comment 14•5 years ago
|
||
Byron, still no luck with new binary. This time the browser launches, but shows beachball for about 30 seconds, The beachball goes away but browser does not navigate to anything entered in address bar.
Assignee | ||
Comment 15•5 years ago
|
||
That's extremely weird. Nothing I touched would effect startup, so this must be some sort of build problem.
Assignee | ||
Comment 16•5 years ago
|
||
Comment 17•5 years ago
|
||
Bugbug thinks this bug is a regression, but please revert this change in case of error.
Assignee | ||
Comment 18•5 years ago
|
||
Honestly, I'm not sure this ever worked properly.
Assignee | ||
Comment 19•5 years ago
|
||
Assignee | ||
Comment 20•5 years ago
|
||
Waiting on some retriggers.
Comment 21•5 years ago
|
||
Comment 22•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Updated•5 years ago
|
Comment 23•5 years ago
|
||
I tried to verify the fix on the latest Firefox Nightly 77.0a1 (2020-04-21) on MacOS 10.14 and I still can see the same problem reported in this bug.
But when I tried to verify the bug on Firefox Nightly 76.0a1 (2020-03-26) after the bug was fixed I couldn't reproduce the issue.
Could you please take a look at this?
Assignee | ||
Comment 24•5 years ago
|
||
Fiddle seems to work fine for me, although the behavior in comment 9 is still present (which is as expected). Can you attach the output you're seeing from the fiddle?
Comment 25•5 years ago
|
||
Attaching a screenshot with the result on the latest Nightly which seems to be the correct result.
I'm not sure why I was seeing "Boo, data channel unexpectedly closed!" as the last message when I tested the last time.
Assignee | ||
Comment 26•5 years ago
•
|
||
That was probably the same thing I noted in comment 9.
Description
•