Bug 1603887: Drive closing of DataChannels with transport events, not negotiation events. r=ng

Differential Revision: https://phabricator.services.mozilla.com/D67946